# jesse-signal-executor

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: dryrun_instances.yaml
db/: init.sql
docs/: embedded-jesse-runtime-design.md  embedded-jesse-runtime-plan.md  embedded-jesse-runtime-review.md  implementation-plan.md  jesse-runtime-bootstrap-plan.md  minimal-db-loop-design.md  minimal-db-loop-plan.md  ott2butkama-signal-bridge-plan.md  runbook.md
rules/: architecture-boundaries.md  change-management.md  objective-and-scope.md  promotion-gates.md  trading-safety.md  verification-and-evidence.md
scripts/: bootstrap_jesse_runtime.sh  build_current_position_panel.py  build_trade_history_panel.py  check_heartbeat.py  check_jesse_runtime.py  close_only.sh  dryrun_start.sh  dryrun_status.sh  dryrun_stop.sh  export_backtest_trades.py  fetch_binance_kline_snapshot.py  fetch_binance_market_snapshot.py  init_db.py  notify_dryrun_events.py  run_backtest_compare.py  run_dryrun_supervisor.py  run_executor_loop.py  run_jesse_dryrun_loop.py  run_jesse_live_loop.py  run_single_backtest_case.py  run_strategy_instance.py  smoke_test_ott2butkama_bridge.py  status.sh  summarize_dryrun_account.py  summarize_dryrun_validation.py  sync_jesse_strategy.py  verify_jesse_imports.py
strategies/: __init__.py
tests/: db_testkit.py  test_bootstrap_jesse_runtime_script.py  test_build_current_position_panel.py  test_build_trade_history_panel.py  test_check_jesse_runtime_script.py  test_db_init.py  (+46 more)
(+128 files in other folders)
